# himawari_hsd2nc

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: build-wheels.yml  publish-pypi.yml
build_tools/linux_runtime_builder/: README.md  build_linux.sh
build_tools/linux_runtime_builder/src/: AHI_FAST_Example.f90  himawari_readwrite.f90
examples/: convert_bbox.py
scripts/: build_linux_x86_64.sh  build_windows_amd64.ps1  harden_windows_runtime.ps1
src/fortran/: Makefile  README.md
src/fortran/src/: AHI_Example.f90  himawari.f90  himawari_headerinfo.f90  himawari_nav.f90  himawari_readheader.f90  himawari_readwrite.f90  himawari_utils.f90
src/himawari_hsd2nc/: __init__.py  ahi_backend.py  cli.py  converter.py
tests/: test_import.py
tools/: prepare_wheel_binaries.py
