[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "himawari_hsd2nc"
version = "0.1.0"
description = "Native Himawari HSD to NetCDF converter (ROI-first, no reprojection)."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
keywords = ["himawari", "satellite", "netcdf", "fortran", "remote-sensing", "ahi"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Topic :: Scientific/Engineering :: Atmospheric Science",
  "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
  "xarray>=2024.0.0",
  "numpy>=1.24",
  "netCDF4>=1.6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "build>=1.2.0",
  "cibuildwheel>=2.20.0",
]

[project.scripts]
himawari-hsd2nc = "himawari_hsd2nc.cli:main"
himawari-hsd-convert = "himawari_hsd2nc.cli:main"

[project.urls]
Homepage = "https://github.com/P-Coke/himawari_hsd2nc"
Repository = "https://github.com/P-Coke/himawari_hsd2nc"
Issues = "https://github.com/P-Coke/himawari_hsd2nc/issues"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["himawari_hsd2nc*"]

[tool.setuptools.package-data]
himawari_hsd2nc = ["bin/**/*", "py.typed"]

[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-*"
skip = ["*-musllinux*"]
before-build = "python tools/prepare_wheel_binaries.py"
test-command = "python -c \"import himawari_hsd2nc; print('import ok')\""

[tool.cibuildwheel.linux]
archs = ["x86_64"]

[tool.cibuildwheel.windows]
archs = ["AMD64"]
